--- a/appspec.yml
+++ b/appspec.yml
@@ -4,7 +4,7 @@ files:
   - source: /index.html
     destination: /var/www/html/
 hooks:
-  BeforeInstall:
+  AfterInstall:
     - location: scripts/start_server.sh
 	  timeout: 300
 	  runas: root
