--- a/appspec.yml
+++ b/appspec.yml
@@ -4,15 +4,15 @@ files:
   - source: /index.html
     destination: /var/www/html/
 hooks:
-  AfterInstall:
-    - location: scripts/install_dependencies.sh
+  BeforeInstall:
+    - location: scripts/install_dependencies
       timeout: 300
       runas: root
-    - location: scripts/start_server.sh
+    - location: scripts/start_server
       timeout: 300
       runas: root
   ApplicationStop:
-    - location: scripts/stop_server.sh
+    - location: scripts/stop_server
       timeout: 300
       runas: root
  
